Better Support & Formatting
- Added Unity Roslyn analyzers support (See <https://code.visualstudio.com/docs/other/unity#_enabling-unity-warnings>)
- Added Formatting support (See CreateOmniSharpConfig() in VSCodeScriptEditor.cs)
- Removed Rider Package (Spits)
- Updated Text-Framework to 1.3.3
- Start of Community Support

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ bld/
 [Bb]in/
 [Oo]bj/
 [Ll]og/
+[Nn]uGet/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
@@ -456,6 +457,8 @@ Assets/StreamingAssets/crashlytics-build.properties
 ### VisualStudioCode ###
 */.vscode/*
 .vscode
+.editorconfig
+omnisharp.json
 
 ### My stuff ###
 **/ValidationSuiteResults/*
