--- a/.gitignore
+++ b/.gitignore
@@ -468,3 +468,4 @@ omnisharp.json
 .history
 
 # End of https://www.gitignore.io/api/rider,unity,csharp,visualstudiocode
+com.tsk.ide.vscode.code-workspace
