--- a/com.tsk.ide.vscode/Editor/com.tsk.vscode.Editor.asmdef
+++ b/com.tsk.ide.vscode/Editor/com.tsk.vscode.Editor.asmdef
@@ -11,22 +11,6 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [
-        {
-            "name": "Unity",
-            "expression": "2021.2.0a9",
-            "define": "ROSLYN_ANALYZER_FIX"
-        },
-        {
-            "name": "Unity",
-            "expression": "[2021.1.2f1,2021.2.0a1]",
-            "define": "ROSLYN_ANALYZER_FIX"
-        },
-        {
-            "name": "Unity",
-            "expression": "[2020.3.6f1,2021.0]",
-            "define": "ROSLYN_ANALYZER_FIX"
-        }
-    ],
+    "versionDefines": [],
     "noEngineReferences": false
 }
