--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: true
 contact_links:
   - name: Get support on Discord
-    url: https://discord.com/channels/1106106269837819914/1107004906696622102
+    url: https://discord.gg/rFkeXCUFCt
     about: Get help from the maintainers on Discord
