--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: true
 contact_links:
   - name: Get support on Discord
-    url: https://discord.gg/rFkeXCUFCt
+    url: https://discord.gg/tZmsjTFEBx
     about: Get help from the maintainers on Discord
