--- a/com.tsk.ide.vscode/package.json
+++ b/com.tsk.ide.vscode/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "com.tsk.ide.vscode",
+    "name": "com.unity.ide.vscode",
     "displayName": "TSK VSCode Editor",
     "description": "Unofficial code editor integration for supporting Visual Studio Code as code editor for Unity. Adds support for generating csproj files for intellisense purposes, auto discovery of installations, etc.",
     "version": "1.4.2",
